# RolloutRunner

./: .env.example  .gitignore  analysis_report.md  analyze_rollout.py  check_db_status.py  launch_eval.sh  pyproject.toml  run_eval_sequential.sh  smoke_retry_qwen.sh
configs/agents/: aiq.yaml  auto_deep_research.yaml  claudecode.yaml  deepresearchagent.yaml  deerflow.yaml  mabc-qwen.yaml  mabc.yaml  o3_deep_research.yaml  o4_mini_deep_research.yaml  openrca-qwen.yaml  openrca.yaml  taskweaver.yaml  thinkdepthai-gemini.yaml  thinkdepthai-gpt.yaml  thinkdepthai-mw-v2.yaml  thinkdepthai-qwen-mw.yaml  thinkdepthai-qwen.yaml  thinkdepthai-qwen36.yaml  thinkdepthai.yaml
configs/prompts/: rca.yaml  rca_deep_research.yaml
docs/: langchain-anthropic-usage-tracking.md
docs/plans/: 2026-03-04-rolloutrunner-impl.md  2026-03-04-thinkdepthai-eval-design.md  2026-03-10-aiq-eval-design.md  2026-03-10-auto-deep-research-eval-design.md  2026-03-10-o3-deep-research-eval-design.md  EVAL_RUNBOOK.md  ROLLOUT_EVAL_PLAN.md
docs/specs/: robust-eval-runner.md
scripts/: backfill_cost_metrics.py  create_openrca_init_db.py  monitor_mw_v3.sh  mw_v3_monitor.sh  run_failed_cases.sh  run_mw_v2_experiment.py  run_mw_v3_experiment.py  run_qwen35_serial.sh  run_resample.sh  run_resample_one.sh  run_rollout.py  run_rollout_with_retry.py  run_with_retry.sh
src/: cost_metrics.py  dataset.py  db_writer.py  runner.py  usage_tracker.py
